# subscription-manager

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  HERMES_DEPLOYMENT_HANDOFF.md  README.md  compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  logging.json  pyproject.toml
backend/app/: __init__.py  cli.py  main.py  server.py
backend/app/api/: auth.py  business.py  health.py  reminders.py
backend/app/auth/: __init__.py  security.py
backend/app/core/: __init__.py  config.py  database.py  errors.py  event_loop.py  logging.py  middleware.py  request_context.py
backend/app/domain/: __init__.py  billing.py
backend/app/models/: __init__.py  tables.py
backend/app/notifications/: ntfy.py
backend/app/scheduler/: __init__.py  __main__.py
backend/app/services/: __init__.py  accounts.py  business.py  exchange_rates.py  reminders.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_p0_baseline.py  ae17e2c0f9f8_add_p1_domain_auth_and_reminder_schema.py  b6d2c9e41a70_add_external_reminder_claim_owner.py
backend/tests/: conftest.py  test_account_recovery.py  test_api_integration.py  test_billing_domain.py  test_exchange_rates.py  test_hardening.py  test_health.py  test_hermes_contract.py  test_reminders.py  test_scheduler.py  test_security.py  test_services_integration.py
deploy/: .env.external-db.example  .env.production.example  compose.external-db.yml  compose.production.yml
docs/: BACKUP_RESTORE.md  CONFIGURATION.md  DEVELOPMENT_HOST_HANDOFF.md  HERMES_FIRST_ARCHITECTURE.md  HERMES_HOST_DEPLOYMENT.md  (+11 more)
(+65 files in other folders)
