[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-subscription-manager-backend"
version = "0.1.0"
description = "API and scheduler for Hermes Subscription Manager"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.14,<2",
  "apscheduler>=3.11,<4",
  "argon2-cffi>=23.1,<26",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "python-dateutil>=2.9,<3",
  "python-dotenv>=1.0,<2",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "types-python-dateutil>=2.9,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.ruff.lint.per-file-ignores]
"app/api/*.py" = ["B008"]
"app/auth/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true
